--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+mat-icon {
+  @apply text-gray-400;
+}
+.mat-drawer-inner-container::-webkit-scrollbar {
+  display: none;
+}
