--- a/src/app/dashboard/pages/not-found/not-found.component.html
+++ b/src/app/dashboard/pages/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+<img
+  class="m-auto mt-4"
+  src="https://img.freepik.com/free-vector/404-error-with-landscape-concept-illustration_114360-7898.jpg?w=996&t=st=1683949249~exp=1683949849~hmac=7662e3ac392e13b3b1fcc5b73df56ab0175ba7a215d2a9797d5fc871bb1a7441"
+/>
