--- a/src/app/dashboard/components/right-sidenav/right-sidenav.component.html
+++ b/src/app/dashboard/components/right-sidenav/right-sidenav.component.html
@@ -4,14 +4,19 @@
   </button>
 </div>
 <div>
-  <div matRipple class="hover:bg-gray-100 hover:cursor-pointer p-3">
+  <div
+    *ngFor="let user of users"
+    matRipple
+    class="hover:bg-gray-100 hover:cursor-pointer p-3"
+  >
     <span class="relative">
       <img
-        class="rounded-[50%]"
-        src="https://images.pexels.com/photos/428328/pexels-photo-428328.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        class="rounded-[50%] w-10 h-10 object-cover"
+        [src]="user.imageUrl"
         alt="image"
       />
       <app-badge
+        *ngIf="user.hasBadge"
         size="medium"
         className="text-white bottom-[-2px] right-[-2px] bg-custom-primary-400 border-white border-[3px]"
       >
