main project page

--- a/src/app/dashboard/components/navigation-group-list/navigation-group-list.component.html
+++ b/src/app/dashboard/components/navigation-group-list/navigation-group-list.component.html
@@ -2,7 +2,7 @@
   <div>
     <div class="pl-4">
       <div class="text-custom-primary-400">{{ group.name | titlecase }}</div>
-      <span class="text-gray-400">{{ group.definition }}</span>
+      <span class="text-gray-400 text-xs">{{ group.definition }}</span>
     </div>
     <mat-nav-list>
       <mat-list-item
