--- a/src/app/dashboard/pages/home/home.component.html
+++ b/src/app/dashboard/pages/home/home.component.html
@@ -65,6 +65,12 @@
       </div>
     </mat-toolbar>
 
+    <button
+      mat-button
+      class="fixed z-50 hover:cursor-pointer top-[250px] right-[40px] bg-red-600 pl-0 text-white rounded-l-2xl"
+    >
+      <mat-icon class="text-white">settings</mat-icon>
+    </button>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
