--- a/src/app/shared/components/stat-card/stat-card.component.html
+++ b/src/app/shared/components/stat-card/stat-card.component.html
@@ -13,7 +13,9 @@
       statType | titlecase
     }}</span>
   </mat-card-content>
-  <mat-card-footer *ngIf="footerContent" class="text-center mt-8">{{
-    footerContent
-  }}</mat-card-footer>
+  <mat-card-footer
+    *ngIf="footerContent"
+    class="text-center text-gray-500 mt-8"
+    >{{ footerContent }}</mat-card-footer
+  >
 </mat-card>
