--- a/src/app/dashboard/pages/project/project.component.html
+++ b/src/app/dashboard/pages/project/project.component.html
@@ -3,7 +3,7 @@
     <app-project-hero [userData]="userData"></app-project-hero>
   </div>
 </div>
-<div class="bg-gray-100 h-full">
+<div class="bg-gray-100 min-h-full">
   <div class="max-w-[1440px] m-auto p-6 relative">
     <div
       class="absolute hover:cursor-pointer rounded-xl bg-gray-100 flex items-center p-2 px-3 left-[24px] top-[-30px]"
